[package]
name = "hello_fsync"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
byteorder = "1.5.0"
bytes = "1.7.1"
clap = { version = "4.1", default-features = false, features = ["std", "help", "usage", "derive", "suggestions", "cargo"] }
crc32fast = "1.4.2"
snap = "1.1.1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tonic = { version = "0.11", features = ["prost", "gzip"] }
opentelemetry = "0.22"
opentelemetry_sdk = { version = "0.22", features = [
    "rt-tokio",
    "trace",
    "metrics",
] }
opentelemetry-otlp = { version = "0.15", features = [
    "http-proto",
    "serialize",
    "serde",
    "reqwest-client",
] }
opentelemetry-proto = { version = "0.5", features = [
    "gen-tonic",
    "serde",
    "logs",
    "metrics",
    "trace",
] }
once_cell = "1.19.0"